--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI= mongodb+srv://thakurujjawal2003:Ujjawal2003%40123@cluster0.sffdofl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI= mongodb+srv://thakurujjawal2003:Ujjawal2003%40123@cluster0.sffdofl.mongodb.net/JobTracker?retryWrites=true&w=majority&appName=Cluster0
