--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,68 @@
-# Node modules
+# Node.js
+
 node_modules/
 
-# Environment variables
-.env
-
-# Logs
-logs
-*.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# OS-specific
+yarn-debug.log*
+
+yarn-error.log*
+ 
+# Environment Variables
+
+.env
+ 
+# Logs
+
+logs/
+
+*.log
+
+npm-debug.log*
+
+yarn-debug.log*
+
+yarn-error.log*
+ 
+# Dependency directories
+
+node_modules/
+ 
+# Optional npm cache directory
+
+.npm
+ 
+# Optional eslint cache
+
+.eslintcache
+ 
+# dotenv environment variables file
+
+.env
+ 
+# Optional REPL history
+
+.node_repl_history
+ 
+# IDEs and editors
+
+.idea/
+
+.vscode/
+
+*.suo
+
+*.ntvs*
+
+*.njsproj
+
+*.sln
+
+*.sw?
+ 
+# OS-specific files
+
 .DS_Store
+
 Thumbs.db
+ 
